// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowStatus matches the snapshot with label prop 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-grow-4 MuiGrid-item"
  >
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <span
        class="MuiTypography-root makeStyles-label-2 MuiTypography-overline MuiTypography-gutterBottom"
        data-testid="workflow-label"
      >
        Agreement Status
      </span>
      <span
        class="MuiTypography-root makeStyles-inactive-139 makeStyles-declinedStatus-140 MuiTypography-overline MuiTypography-gutterBottom"
      >
        Declined
      </span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-arrow-3"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
      <span
        class="MuiTypography-root makeStyles-active-138 makeStyles-draftStatus-141 MuiTypography-overline MuiTypography-gutterBottom"
      >
        Draft
      </span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-arrow-3"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
      <span
        class="MuiTypography-root makeStyles-inactive-139 makeStyles-pendingStatus-142 MuiTypography-overline MuiTypography-gutterBottom"
      >
        Pending
      </span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-arrow-3"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
      <span
        class="MuiTypography-root makeStyles-inactive-139 makeStyles-acceptedStatus-143 MuiTypography-overline MuiTypography-gutterBottom"
      >
        Accepted
      </span>
    </div>
  </div>
</div>
`;

exports[`WorkflowStatus matches the snapshot without label prop 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-grow-156 MuiGrid-item"
  >
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <span
        class="MuiTypography-root makeStyles-inactive-261 makeStyles-declinedStatus-262 MuiTypography-overline MuiTypography-gutterBottom"
      >
        Declined
      </span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-arrow-155"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
      <span
        class="MuiTypography-root makeStyles-active-260 makeStyles-draftStatus-263 MuiTypography-overline MuiTypography-gutterBottom"
      >
        Draft
      </span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-arrow-155"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
      <span
        class="MuiTypography-root makeStyles-inactive-261 makeStyles-pendingStatus-264 MuiTypography-overline MuiTypography-gutterBottom"
      >
        Pending
      </span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root makeStyles-arrow-155"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
      <span
        class="MuiTypography-root makeStyles-inactive-261 makeStyles-acceptedStatus-265 MuiTypography-overline MuiTypography-gutterBottom"
      >
        Accepted
      </span>
    </div>
  </div>
</div>
`;
